[gd_scene load_steps=6 format=3 uid="uid://staoydwhp44g"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_ouohd"]
[ext_resource type="Texture2D" uid="uid://dbcmgiyx1l6ki" path="res://assets/sprites/Tiles/background_5.1.png" id="2_8huke"]
[ext_resource type="Shader" path="res://shaders/scroll.gdshader" id="3_n0dyq"]
[ext_resource type="FontFile" uid="uid://clbsxcq5ul0en" path="res://assets/font/PixelOperator8.ttf" id="4_3qwos"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xrh0e"]
shader = ExtResource("3_n0dyq")
shader_parameter/speed = 0.05

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouohd")

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_xrh0e")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8huke")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -189.0
offset_right = 43.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.81666, 1.81666)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3qwos")
text = "Master"
horizontal_alignment = 1

[node name="Master" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3qwos")
text = "Mute"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3qwos")
text = "Music"
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="Mute2" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3qwos")
text = "Mute"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3qwos")
text = "SFX"
horizontal_alignment = 1

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="Mute3" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_3qwos")
text = "Mute"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Master")
theme_override_fonts/font = ExtResource("4_3qwos")
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute2" to="." method="_on_mute_2_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute3" to="." method="_on_mute_3_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
